Finished basic setup for picker component. Fixed collapsing navbar.

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -5,6 +5,7 @@
 $dark-blue: #0b0d17
 $light-blue: #d0d6f9
 $basic-white: #fff
+$transparent-white: rgba(255, 255, 255, 0.25)
 
 // ------------FONT GENERALS------------------
 @mixin bellefair-white
@@ -68,8 +69,7 @@ $basic-white: #fff
   font-size: 18px
   line-height: 32px
 
-//---------------COMPONENTS--------------------
-
+//---------------CONTENT PICKER COMPONENT--------------------
 .dot
   width: 60%
   margin: 0 auto
@@ -97,13 +97,13 @@ $basic-white: #fff
       border: 1px solid $basic-white
 
     &--active
-      background-color: rgba(255, 255, 255, 1)
+      background-color: $basic-white
       border: 1px solid $basic-white
       color: $dark-blue
 
     &--inactive
       background-color: rgba(255, 255, 255, 0)
-      border: 1px solid rgba(255, 255, 255, 0.25)
+      border: 1px solid $transparent-white
       color: $basic-white
 
 
@@ -150,7 +150,7 @@ $basic-white: #fff
 
     &--inactive
       background-color: rgba(255, 255, 255, 0)
-      border: 1px solid rgba(255, 255, 255, 0.25)
+      border: 1px solid $transparent-white
       color: $basic-white
 
 .named
@@ -166,6 +166,29 @@ $basic-white: #fff
     @include subheading-two
     border: none
     background-color: rgba(255, 255, 255, 0)
+    position: relative
+    cursor: pointer
+    padding-bottom: 0.8rem
+
+    &--inactive::before,
+    &--active::before
+      content: ''
+      position: absolute
+      bottom: 0
+      left: -0.08rem
+      right: -0.05rem
+      top: 0
+      transition: all ease-out 250ms
+
+    &--inactive::before
+      transform: scaleX(0)
+      border-bottom: 2px solid $transparent-white
+
+    &--inactive:hover::before
+        transform: scaleX(1)
+
+    &--active::before
+      border-bottom: 2px solid $basic-white
         
 
 
@@ -229,7 +252,6 @@ a
 .nav
   position: absolute
   top: 0
-  right: 0
   height: 100vh
   transition: all 0.2s ease-in
   background-color: rgba(255, 255, 255, 0.04)
@@ -238,24 +260,30 @@ a
   flex-direction: row-reverse
   justify-content: space-between
   overflow: hidden
+  width: 15rem
 
   &__exit
     width: 2rem
     height: 2rem
     position: relative
     display: block
+    margin: 1rem
 
   &--open
-    max-width: 15rem
+    transform: scaleX(1)
+    right: 0
 
   &--closed
-    max-width: 0
+    transform: scaleX(0)
+    right: -15rem
 
   &-list
-    height: 100%
+    margin-left: 3rem
+    height: 50%
     display: flex
+    align-self: center
     flex-direction: column
-    justify-content: center
+    justify-content: space-evenly
 
     &-item
       overflow: hidden
@@ -307,15 +335,47 @@ a
 
   &__button
     @include heading-four
+    position: relative
     color: $dark-blue
     font-size: 20px
-    background-color: $basic-white
+    background-color: rgba(255, 255, 255, 0)
     display: flex
     justify-content: center
     align-items: center
     width: 150px
     height: 150px
     border-radius: 50%
+    z-index: 2
+    transition: all ease-out 150ms
+
+    &::before,
+    &::after
+      position: absolute
+      content: ''
+      width: 100%
+      height: 100%
+      border-radius: 50%
+      transition: transform ease 250ms
+
+    &::before
+      background-color: $transparent-white
+      transform: scale(50%)
+      z-index: 0
+    
+    &:hover::before
+      transform: scale(1)
+
+    &::after
+      background-color: $basic-white
+      z-index: 1
+      
+
+    &:active
+      width: 148px
+      height: 148px
+    
+      &::before
+        transform: scale(50%)
   
 .dest-container
   display: flex
